tempfile/auto_impl/tests/compile-fail/value_self_for_immutable_ref.rs
use auto_impl::auto_impl;


#[auto_impl(&)]
trait Foo {
    fn foo(self);
}


fn main() {}
